# clovr-fndr

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
backend/: manage.py  requirements.txt
backend/clovr_fndr/: asgi.py  settings.py  urls.py  wsgi.py
backend/detection/: admin.py  models.py  serializers.py  urls.py  views.py
backend/detection/migrations/: 0001_initial.py
backend/detection/services/: yolo_service.py
backend/discoveries/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/discoveries/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx
frontend/src/components/: Camera.jsx  DetectionCard.jsx  DetectionOverlay.jsx  Layout.jsx  PhotoUpload.jsx
frontend/src/hooks/: useCamera.js  useDetection.js
frontend/src/pages/: About.jsx  Gallery.jsx  Home.jsx
frontend/src/services/: api.js
frontend/src/styles/: globals.css
scripts/: setup_dev.sh
training/: clover.yaml  export.py  predict.py  train.py  validate.py
training/configs/: augmentation_config.yaml  train_config.yaml
training/data/: augment_copypaste.py  generate_backgrounds.py  migrate_legacy.py  prepare_dataset.py
training/utils/: metrics.py  visualization.py
